--- a/app/partials/bdm_detail.html
+++ b/app/partials/bdm_detail.html
@@ -57,8 +57,6 @@
 						<td>
 							<span class="gray">保障期限</span>
 							<div class="bd-effective">
-
-							
 								<img src="img/wsx.png"  ng-show="data.insure_status==0 " />
 								<img src="img/cover.png"  ng-show="data.insure_status==1 " />
 								<img src="img/shixiao.png"  ng-show="data.insure_status==2" />
@@ -171,28 +169,28 @@
 			<div class="cell_hd cell_primary">
 				<a href="/ybwx-web/api/web_page/{{data.provision_id}}" style="color:#555;">
 				<div class="img-box">
-					<img src="img/tiaokuan.png"/>
+					<i class="iconfont" style="font-size:15px;vertical-align: -3px;">&#xe606;</i>
 				</div>
 				<div>产品条款</div>
 				</a>
 			</div>
 			<div class="cell_hd cell_primary" ng-click="goClaimInfo(data.claim_info_id )">
 					<div  class="img-box">
-						<img src="img/baodan.png"/>
+						<i class="iconfont" style="font-size:15px;vertical-align: -3px;">&#xe611;</i>
 					</div>
 					<div>理赔资料</div>
 			</div>
 			<div class="cell_hd cell_primary" >
 				<a  class="rexian" href="tel:{{data.claim_line}}">
 					<div  class="img-box">
-						<img src="img/rexian.jpg"/>
+					<i class="iconfont" style="font-size:15px;vertical-align: -3px;">&#xe610;</i>
 					</div>
 					<div>理赔热线</div>
 				</a>
 			</div>
 			<div class="cell_hd cell_primary" ng-click="showTip()">
 				<div  class="img-box">
-					<img src="img/fenxiang.png"/>
+				<i class="iconfont" style="font-size:15px;vertical-align: -3px;">&#xe608;</i>
 				</div>
 				<div>发送保单</div>
 			</div>
@@ -366,25 +364,25 @@
 	<div class="cell ">
 		<div class="cell_hd cell_primary">
 			<div class="img-box">
-				<img src="img/qian1.png"/>
+					<i class="iconfont" style="font-size:15px;vertical-align: -3px;">&#xe606;</i>
 			</div>
 			<div class="twowid">产品条款</div>
 		</div>
 		<div class="cell_hd cell_primary" >
 			<div  class="img-box">
-				<img src="img/tiaokuan.png"/>
+				<i class="iconfont" style="font-size:15px;vertical-align: -3px;">&#xe611;</i>
 			</div>
 			<div class="twowid">理赔资料</div>
 		</div>
 		<div class="cell_hd cell_primary" >
 			<div  class="img-box">
-				<img src="img/baodan.png"/>
+				<i class="iconfont" style="font-size:15px;vertical-align: -3px;">&#xe610;</i>
 			</div>
 			<div class="twowid">理赔热线</div>
 		</div>
 		<div class="cell_hd cell_primary" >
 			<div  class="img-box">
-				<img src="img/fenxiang.png"/>
+				<i class="iconfont" style="font-size:15px;vertical-align: -3px;">&#xe608;</i>
 			</div>
 			<div class="twowid">发送保单</div>
 		</div>
