--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -136,6 +136,6 @@
 </div> -->
 <div class="cell pay_container">
   <a href="javascript:void(0)" class="btn btn_dark_2_primary" ng-click="goBdUpload();" style="border-radius: 0px;">
-		<img src="img/upload_icon.png">&nbsp;上传保单</a>
+			<i class="iconfont"  style="font-size: 16px;color:#95b9e8">&#xe621;</i>&nbsp;上传保单</a>
 </div>
 
