--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -1,5 +1,5 @@
 <div id="wrapper" class="wrapper"  data-ng-init="init()">
-<div class="gift" id="gift" ></div>
+<div class="gift" id="gift" ><i class="iconfont" style="color:#1e4e8e">&#xe618;</i></div>
   <div id="pieChartContainer">
     <div id="loadingContainer" >
     </div>
@@ -11,15 +11,15 @@
     <p class="bd_yz" ng-click="goVerfiy()">保单验真 > </p>
   </div>
   -->
-   <!-- <input id="demo1" type="text" readonly="" placeholder="日期选择特效" data-lcalendar="2014-05-11,2016-05-11" /> -->
+   <!--  -->
 
 
   <div calss="mag-container" style="margin-top:0.1rem;">
        <div class="cell_hd cell_primary">
-             <div class="cell-circle " ng-click="goBdMange()"><div class="icon icon-mangment"></div><div>保单管理</div></div>
+             <div class="cell-circle " ng-click="goBdMange()"><i class="iconfont" style="color:#99b8de">&#xe600;</i><div>保单管理</div></div>
        </div>
        <div class="cell_hd cell_primary">
-             <div class="cell-circle " ng-click="goPromote()"><div class="icon icon-up"></div><div>保障提升</div></div>
+             <div class="cell-circle " ng-click="goPromote()"><i class="iconfont"  style="color:#99b8de">&#xe602;</i><div>保障提升</div></div>
        </div>
   </div>
 
@@ -27,13 +27,13 @@
 </div>
 <div class="fix_container select_btn " >
     <div class="cell_hd cell_primary " >
-    <div class="cell-footer hover" ng-click="goIndex($event)"><div class="icon icon-home"></div><div>首页</div></div>
+    <div class="cell-footer hover" ng-click="goIndex($event)"><i class="iconfont">&#xe61b;</i><div>首页</div></div>
     </div>
     <div class="cell_hd cell_primary">
-      <div class="cell-footer" ng-click="goTemai($event)"><div class="icon icon-shopping"></div><div>严选</div></div>
+      <div class="cell-footer" ng-click="goTemai($event)"><i class="iconfont">&#xe623;</i><div>严选</div></div>
     </div>
     <div class="cell_hd cell_primary">
-      <div class="cell-footer" ng-click="goService($event)"><div class="icon icon-service"></div><div>服务</div></div>
+      <div class="cell-footer" ng-click="goService($event)"><i class="iconfont">&#xe60a;</i><div>服务</div></div>
     </div>
 </div>
 <script>
