--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,13 +1,10 @@
-
 /* -----------------------------------------------------------------------------
 
   HEADER OBJECT
   
 ----------------------------------------------------------------------------- */
-
 #pieChartContainer {
-  position: relative;
-  /*margin-top: 0.3rem;*/
+  position: relative;    /*margin-top: 0.3rem;*/
 }
 
 /* -----------------------------------------------------------------------------
@@ -20,9 +17,6 @@ footer {
   text-align: center;
 }
 
-
-
-
 /* -----------------------------------------------------------------------------
 
   BUTTONS,INPUT
@@ -34,12 +28,13 @@ footer {
   /* 老版本语法: Firefox (buggy) */
 
   display: block;
-
 }
+
 .cell_primary {
   width: 2000px;
   white-space: normal;
 }
+
 .cell_hd {
   position: relative;
   display: table-cell;
@@ -49,11 +44,13 @@ footer {
   word-wrap: break-word;
   word-break: break-all;
 }
+
 .cell_hd_border {
   border: 1px solid #9c9c9c;
 }
+
 .cell_title {
-  font-size: 0.17rem;
+  font-size: .17rem;
   position: relative;
   margin-top: 5px;
   padding: 5px 0 6px 0;
@@ -72,34 +69,40 @@ footer {
   border: 1px solid #37bdc8;
   background-color: #fff;
 }
+
 .btn_disabled {
   color: #37bdc8;
   border: 1px solid #37bdc8;
   background-color: rgba(255, 255, 255, .6);
 }
+
 .btn_default:active {
   color: #fff;
   border: 1px solid #37bdc8;
   background-color: #37bdc8;
 }
+
 .btn_primary:not(.btn_disabled):active {
   color: #37bdc8;
   border: 1px solid #37bdc8;
   background-color: #fff;
 }
+
 .ipt {
   font-size: 15px;
   line-height: 2.33333333;
   box-sizing: border-box;
   width: 100%;
+  padding-left: 5px;
   color: inherit;
   border: 0;
   outline: 0;
   background-color: transparent;
-  padding-left:5px;
   -webkit-appearance: none;
 }
-.ipt::-webkit-outer-spin-button, .ipt::-webkit-inner-spin-button {
+
+.ipt::-webkit-outer-spin-button,
+.ipt::-webkit-inner-spin-button {
   margin: 0;
   -webkit-appearance: none;
 }
@@ -108,266 +111,319 @@ footer {
   position: relative;
 }
 
-
-
 .sk-fading-circle {
-  margin: 100px auto;
+  position: relative;
+  z-index: 20000;
   width: 30px;
   height: 30px;
-  z-index:20000;
-  position: relative;
+  margin: 100px auto;
 }
 
 .sk-fading-circle .sk-circle {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
 }
 
 .sk-fading-circle .sk-circle:before {
-  content: '';
   display: block;
-  margin: 0 auto;
   width: 15%;
   height: 15%;
-  background-color: #fff;
-  border-radius: 100%;
+  margin: 0 auto;
+  content: '';
   -webkit-animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
-          animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+  animation: sk-circleFadeDelay 1.2s infinite ease-in-out both;
+  border-radius: 100%;
+  background-color: #fff;
 }
+
 .sk-fading-circle .sk-circle2 {
   -webkit-transform: rotate(30deg);
-      -ms-transform: rotate(30deg);
-          transform: rotate(30deg);
+  -ms-transform: rotate(30deg);
+  transform: rotate(30deg);
 }
+
 .sk-fading-circle .sk-circle3 {
   -webkit-transform: rotate(60deg);
-      -ms-transform: rotate(60deg);
-          transform: rotate(60deg);
+  -ms-transform: rotate(60deg);
+  transform: rotate(60deg);
 }
+
 .sk-fading-circle .sk-circle4 {
   -webkit-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-          transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
 }
+
 .sk-fading-circle .sk-circle5 {
   -webkit-transform: rotate(120deg);
-      -ms-transform: rotate(120deg);
-          transform: rotate(120deg);
+  -ms-transform: rotate(120deg);
+  transform: rotate(120deg);
 }
+
 .sk-fading-circle .sk-circle6 {
   -webkit-transform: rotate(150deg);
-      -ms-transform: rotate(150deg);
-          transform: rotate(150deg);
+  -ms-transform: rotate(150deg);
+  transform: rotate(150deg);
 }
+
 .sk-fading-circle .sk-circle7 {
   -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
+
 .sk-fading-circle .sk-circle8 {
   -webkit-transform: rotate(210deg);
-      -ms-transform: rotate(210deg);
-          transform: rotate(210deg);
+  -ms-transform: rotate(210deg);
+  transform: rotate(210deg);
 }
+
 .sk-fading-circle .sk-circle9 {
   -webkit-transform: rotate(240deg);
-      -ms-transform: rotate(240deg);
-          transform: rotate(240deg);
+  -ms-transform: rotate(240deg);
+  transform: rotate(240deg);
 }
+
 .sk-fading-circle .sk-circle10 {
   -webkit-transform: rotate(270deg);
-      -ms-transform: rotate(270deg);
-          transform: rotate(270deg);
+  -ms-transform: rotate(270deg);
+  transform: rotate(270deg);
 }
+
 .sk-fading-circle .sk-circle11 {
   -webkit-transform: rotate(300deg);
-      -ms-transform: rotate(300deg);
-          transform: rotate(300deg); 
+  -ms-transform: rotate(300deg);
+  transform: rotate(300deg);
 }
+
 .sk-fading-circle .sk-circle12 {
   -webkit-transform: rotate(330deg);
-      -ms-transform: rotate(330deg);
-          transform: rotate(330deg); 
+  -ms-transform: rotate(330deg);
+  transform: rotate(330deg);
 }
+
 .sk-fading-circle .sk-circle2:before {
   -webkit-animation-delay: -1.1s;
-          animation-delay: -1.1s; 
+  animation-delay: -1.1s;
 }
+
 .sk-fading-circle .sk-circle3:before {
   -webkit-animation-delay: -1s;
-          animation-delay: -1s; 
+  animation-delay: -1s;
 }
+
 .sk-fading-circle .sk-circle4:before {
-  -webkit-animation-delay: -0.9s;
-          animation-delay: -0.9s; 
+  -webkit-animation-delay: -.9s;
+  animation-delay: -.9s;
 }
+
 .sk-fading-circle .sk-circle5:before {
-  -webkit-animation-delay: -0.8s;
-          animation-delay: -0.8s; 
+  -webkit-animation-delay: -.8s;
+  animation-delay: -.8s;
 }
+
 .sk-fading-circle .sk-circle6:before {
-  -webkit-animation-delay: -0.7s;
-          animation-delay: -0.7s; 
+  -webkit-animation-delay: -.7s;
+  animation-delay: -.7s;
 }
+
 .sk-fading-circle .sk-circle7:before {
-  -webkit-animation-delay: -0.6s;
-          animation-delay: -0.6s; 
+  -webkit-animation-delay: -.6s;
+  animation-delay: -.6s;
 }
+
 .sk-fading-circle .sk-circle8:before {
-  -webkit-animation-delay: -0.5s;
-          animation-delay: -0.5s; 
+  -webkit-animation-delay: -.5s;
+  animation-delay: -.5s;
 }
+
 .sk-fading-circle .sk-circle9:before {
-  -webkit-animation-delay: -0.4s;
-          animation-delay: -0.4s;
+  -webkit-animation-delay: -.4s;
+  animation-delay: -.4s;
 }
+
 .sk-fading-circle .sk-circle10:before {
-  -webkit-animation-delay: -0.3s;
-          animation-delay: -0.3s;
+  -webkit-animation-delay: -.3s;
+  animation-delay: -.3s;
 }
+
 .sk-fading-circle .sk-circle11:before {
-  -webkit-animation-delay: -0.2s;
-          animation-delay: -0.2s;
+  -webkit-animation-delay: -.2s;
+  animation-delay: -.2s;
 }
+
 .sk-fading-circle .sk-circle12:before {
-  -webkit-animation-delay: -0.1s;
-          animation-delay: -0.1s;
+  -webkit-animation-delay: -.1s;
+  animation-delay: -.1s;
 }
 
 @-webkit-keyframes sk-circleFadeDelay {
-  0%, 39%, 100% { opacity: 0; }
-  40% { opacity: 1; }
+  0%,
+  39%,
+  100% {
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
 }
 
 @keyframes sk-circleFadeDelay {
-  0%, 39%, 100% { opacity: 0; }
-  40% { opacity: 1; } 
+  0%,
+  39%,
+  100% {
+    opacity: 0;
+  }
+
+  40% {
+    opacity: 1;
+  }
+
 }
-
-
 
 .cell-footer {
+  font-size: 12px;
+  line-height: 17px;
   box-sizing: border-box;
   height: 50px;
-  line-height: 17px;
-  text-align: center;
-  background-color: #1e4e8e;
-  color: #4c87d6;
   padding: 7px 0 5px;
-  font-size:12px;
+  text-align: center;
+  color: #4c87d6;
+  background-color: #1e4e8e;
 }
 
-  .cell-footer  .icon, .icon_hover {
-      height: 22px;
-    }
-  .cell-footer   .icon.icon-home {
-      background: url("../../img/index/index.png") no-repeat center;
-      background-size: 22px;
-    }
-  .cell-footer   .icon.icon-shopping {
-      background: url("../../img/index/shopping.png") no-repeat center;
-      background-size: 22px;
-    }
-  .cell-footer   .icon.icon-service {
-      background: url("../../img/index/service.png") no-repeat center;
-      background-size: 22px;
-    }
+.cell-footer  .icon,
+.icon_hover {
+  height: 22px;
+}
 
+.cell-footer   .icon.icon-home {
+  background: url('../../img/index/index.png') no-repeat center;
+  background-size: 22px;
+}
+
+.cell-footer   .icon.icon-shopping {
+  background: url('../../img/index/shopping.png') no-repeat center;
+  background-size: 22px;
+}
+
+.cell-footer   .icon.icon-service {
+  background: url('../../img/index/service.png') no-repeat center;
+  background-size: 22px;
+}
 
 .cell-footer.hover {
   color: #fff;
 }
 
- .cell-footer.hover .icon.icon-home {
-    background: url("../../img/index/index_hover.png") no-repeat center;
-    background-size: 22px;
-  }
-  .cell-footer.hover .icon.icon-shopping {
-    background: url("../../img/index/shopping_hover.png") no-repeat center;
-    background-size: 22px;
-  }
-  .cell-footer.hover .icon.icon-service {
-    background: url("../../img/index/service_hover.png") no-repeat center;
-    background-size: 22px;
-  }
-  .swiper-ctrl {
-  display: none;
+.cell-footer.hover .icon.icon-home {
+  background: url('../../img/index/index_hover.png') no-repeat center;
+  background-size: 22px;
+}
+
+.cell-footer.hover .icon.icon-shopping {
+  background: url('../../img/index/shopping_hover.png') no-repeat center;
+  background-size: 22px;
+}
+
+.cell-footer.hover .icon.icon-service {
+  background: url('../../img/index/service_hover.png') no-repeat center;
+  background-size: 22px;
+}
+
+.swiper-ctrl {
   position: fixed;
+  z-index: 10001;
+  top: 0;
+  left: 0;
+  display: none;
   width: 100%;
   height: 100%;
-  left: 0;
-  top: 0;
-  z-index: 10001;
 }
+
 .opacity_ctrl {
   position: fixed;
-  left: 0;
+  z-index: 10002;
   top: 0;
-  background: #000;
-  opacity: .4;
+  left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10002;
+  opacity: .4;
+  background: #000;
 }
+
 .off {
   position: fixed;
-  right: 19px;
+  z-index: 10003;
   top: 15px;
+  right: 19px;
   width: 20px;
   height: 20px;
-  z-index: 10003;
 }
+
 .off img {
   width: 100%;
   height: 100%;
 }
+
 .swiper-ctrl {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
+
 .swiper-ctrl .swiper-wrapper {
   z-index: 999999;
 }
+
 .swrap_ctrl {
   position: relative;
-  left: 0;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   margin: 20% auto;
 }
+
 .swiper-wrapper .slide {
-  text-align: center;
   font-size: 18px;
-  background: #fff;
   width: 2.67rem;
   height: 60%;
   height: 0;
+  text-align: center;
   border-radius: 10px;
+  background: #fff;
 }
-.swiper-slide .img1,.img2 {
+
+.swiper-slide .img1,
+.img2 {
+
   /*width: 3.34rem;*/
   width: 2.67rem;
 }
-  .up{
-    -ms-transform: rotate(180deg); /* IE 9 */
-      -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
-      transform: rotate(180deg);
-  }
-  .right-rotate{
-    -ms-transform: rotate(270deg); /* IE 9 */
-      -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
-      transform: rotate(270deg);
-  }
-  .icon-arrow{
-        background:url('../../img/temai/arrow.jpg') no-repeat center;
-        background-size:10px;
-        width:10px;
-        height:7px;
-        vertical-align: 1px;
-        margin-left:2px;
-        display: inline-block;
-   }
+
+.up {
+  -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+  -ms-transform: rotate(180deg); /* IE 9 */
+  transform: rotate(180deg);
+}
+
+.right-rotate {
+  -webkit-transform: rotate(270deg); /* Chrome, Safari, Opera */
+  -ms-transform: rotate(270deg); /* IE 9 */
+  transform: rotate(270deg);
+}
+
+.icon-arrow {
+  display: inline-block;
+  width: 10px;
+  height: 7px;
+  margin-left: 2px;
+  vertical-align: 1px;
+  background: url('../../img/temai/arrow.jpg') no-repeat center;
+  background-size: 10px;
+}
