--- a/app/css/globe.css
+++ b/app/css/globe.css
@@ -507,3 +507,14 @@ overflow: hidden;
   border:1px solid #588dd4;
   color: #fff;
 }
+/* svg 图标库*/
+@font-face {
+  font-family: 'iconfont';
+  src: url('//at.alicdn.com/t/font_1470133252_7376595.eot'); /* IE9*/
+  src: url('//at.alicdn.com/t/font_1470133252_7376595.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('//at.alicdn.com/t/font_1470133252_7376595.woff') format('woff'), /* chrome、firefox */
+  url('//at.alicdn.com/t/font_1470133252_7376595.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+  url('//at.alicdn.com/t/font_1470133252_7376595.svg#iconfont') format('svg'); /* iOS 4.1- */
+}
+.iconfont{font-family:"iconfont";
+font-size:22px;font-style:normal;}
