--- a/app/css/index_part.css
+++ b/app/css/index_part.css
@@ -6,11 +6,11 @@ body {
 .gift {
   width: 60px;
   height: 60px;
+  line-height: 60px;
+  text-align: center;
   position: absolute;
   top: -4px;
   right: 0;
-  background: url(../img/index/gift.png) no-repeat center;
-  background-size: 22px;
   z-index: 10;
   cursor: pointer; }
 .gift-message {
