--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -344,7 +344,7 @@ header {
 .more_ctrl {
   width: 110px;
   margin: 0 auto 20px; }
-.date_ctrl {
+.date_ctrl_birthday {
   width: 100%;
   height: 45px;
   border: 1px solid #c1c1c1;
@@ -368,3 +368,8 @@ header {
   text-align: center; }
 .grade li:nth-child(3) {
   border-radius: 0 2px 2px 0; }
+#popup-data:after {
+  content: "  ";
+  display: block;
+  width: 100%;
+  height: 50px; }
