--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -393,7 +393,7 @@ header {
 	width: 110px;
 	margin: 0 auto 20px;
 }
-.date_ctrl {
+.date_ctrl_birthday {
   width: 100%;
   height: 45px;
   border: 1px solid #c1c1c1;
@@ -426,4 +426,11 @@ li:nth-child(1),.grade li:nth-child(3){
  li:nth-child(3){
  border-radius: 0 2px 2px 0;
 }
+}
+
+#popup-data:after{
+	content:"  ";
+	display:block;
+	width:100%;
+	height:50px;
 }
