--- a/app/partials/bd_education_new.html
+++ b/app/partials/bd_education_new.html
@@ -93,7 +93,7 @@
 
 <div class="table-container" style="margin-bottom:70px;">
     <div class="table-title">
-        <div class="bd_mx"><div class="icon-guard"></div>保障明细</div> 
+        <div class="bd_mx"> <i class="iconfont" style="font-size: 17px;color:#006ee9;">&#xe601;</i>保障明细</div>
         <div class="bd_word" ng-click="goBdmList()"><span>查看</span> <div class="icon-arrow right-rotate" ></div></div>
     </div>
 
