--- a/app/partials/bd_education_new.html
+++ b/app/partials/bd_education_new.html
@@ -115,6 +115,6 @@
 
 <div class=" fix_container select_btn" >
 	<div class="cell_hd cell_primary">
-		<a href="javascript:void(0)" class="btn btn_n_primary_new "    ng-click="goDingzhi()" id="submitButton" ><div class="icon-up"></div> 提升保障</a>
+		<a href="javascript:void(0)" class="btn btn_n_primary_new "    ng-click="goDingzhi()" id="submitButton" ><i class="iconfont" style="font-size: 17px;color:#95b9e8">&#xe602;</i> 提升保障</a>
 	</div>	
 </div>
