--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -12,7 +12,8 @@
 	-->
 
 	<div  class="bt_container">
-		<img src="img/global/dun.png" class="dun">
+	
+		<i class="iconfont" style="font-size: 18px;color:#588DD4;vertical-align: -2px;">&#xe603;</i>
 		选择保障项目
 	</div>
 	<div style="position: relative;" id="clockContainer">
@@ -39,7 +40,7 @@
 
 	<div  class="bt_container">
 		<div style="line-height: 25px;">
-			<img src="img/global/dun.png"  class="dun"> 选择保障金额
+			<i class="iconfont" style="font-size: 18px;color:#588DD4;vertical-align: -2px;">&#xe603;</i> 选择保障金额
 			<div class="score2_container">
 				<span id="money_score" class="score">0</span>
 				<span class="danwei">万</span>
