--- a/app/partials/toubao_new.html
+++ b/app/partials/toubao_new.html
@@ -18,7 +18,7 @@
 
 	<div class="solution-title" ng-if="data.effective_date">
 
-		<div class="icon-clock"></div>&nbsp;方案生效时间 <span class="fr"><input type="date" name="effectivedate" ng-model="user.effective_date" ng-change="genPlansInEffectiveDate()"   min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}"   class="ipt"   placeholder="请输入目的地" required></span>
+		<i class="iconfont" style="color:#ABABAB;font-size: 17px;vertical-align: -2px;">&#xe61f;</i>&nbsp;方案生效时间 <span class="fr"><input type="date" name="effectivedate" ng-model="user.effective_date" ng-change="genPlansInEffectiveDate()"   min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}"   class="ipt"   placeholder="请输入目的地" required></span>
 	</div>
 	
 
