--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -7,7 +7,7 @@
 	<label class="switch">
 		<input class="switch-input" type="checkbox" />
 		<span class="switch-label" data-on="是" data-off="否"></span> 
-		<span class="switch-handle"></span> 
+		<span class="switch-handl-off"></span> 
 	</label>
 	<div class="sex">性别</div>
 	<label class="switch">
