--- a/app/css/preference.css
+++ b/app/css/preference.css
@@ -17,25 +17,25 @@ body {
     color: #999;
     font-size: 13px;
     margin-bottom: 15px; }
-  .hobby .relation {
-    position: relative; }
-    .hobby .relation .btn_ctrl img {
-      width: 15px; }
-    .hobby .relation .btn {
-      margin: 0 auto;
-      display: inline-block;
-      width: 190px;
-      height: 44px;
-      line-height: 44px;
-      background: #fff;
-      border-radius: 5px;
-      margin-bottom: 5px;
-      box-sizing: border-box;
-      border: 1px solid #e2e2e2; }
-    .hobby .relation .blue {
-      background: #55a5ff;
-      color: #fff;
-      border: none; }
+  .hobby .relation .btn_ctrl img {
+    width: 15px;
+    display: none; }
+  .hobby .relation .hobby_btn {
+    position: relative;
+    margin: 0 auto;
+    display: inline-block;
+    width: 190px;
+    height: 44px;
+    line-height: 44px;
+    background: #fff;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    box-sizing: border-box;
+    border: 1px solid #e2e2e2; }
+  .hobby .relation .blue {
+    background: #55a5ff;
+    color: #fff;
+    border: none; }
   .hobby .switch {
     position: relative;
     display: block;
