--- a/app/sass/preference.scss
+++ b/app/sass/preference.scss
@@ -10,11 +10,22 @@ body {background: #f5f5f5;line-height: normal;}
 	.trouble {margin: 20px 0 10px 0;}
 	.select {color: #999;font-size: 13px;margin-bottom: 15px;}
 	.relation {
-		position: relative;
 		.btn_ctrl {
-			img {width: 15px;}
+			img {width: 15px;display: none;}
 		}
-		.btn {margin: 0 auto;display: inline-block;width: 190px;height: 44px;line-height: 44px;background: #fff;border-radius: 5px;margin-bottom: 5px;box-sizing: border-box;border: 1px solid #e2e2e2;}
+		.hobby_btn {
+			position:relative;
+			margin: 0 auto;
+			display: inline-block;
+			width: 190px;
+			height: 44px;
+			line-height: 44px;
+			background: #fff;
+			border-radius: 5px;
+			margin-bottom: 5px;
+			box-sizing: border-box;
+			border: 1px solid #e2e2e2;
+		}
 		.blue {background: #55a5ff;color: #fff;border: none;}
 	}
 /*“重点”“全面”*/
