--- a/app/css/temai_list.css
+++ b/app/css/temai_list.css
@@ -52,6 +52,7 @@ body {
     border-bottom: 1px solid #e2e2e2; }
     .insurance .insurance-item .logo {
       width: 1.07rem;
+      position: relative;
       display: -webkit-box;
       display: -webkit-flex;
       display: -moz-box;
@@ -64,6 +65,13 @@ body {
       -webkit-justify-content: center;
       justify-content: center;
       border-right: 1px solid #e2e2e2; }
+      .insurance .insurance-item .logo .logo_mask {
+        position: absolute;
+        background-color: #e9f8ff;
+        height: 22px;
+        width: 100%;
+        left: 0;
+        bottom: 0; }
       .insurance .insurance-item .logo img {
         width: 100px; }
     .insurance .insurance-item .wrap {
