--- a/app/css/userinfo.css
+++ b/app/css/userinfo.css
@@ -179,7 +179,7 @@ box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
 	left: -7px;
 	top: 30px;
 }
-#bg {
+.bg-container {
 	width: 5000px;
 	position: absolute;
 	transition: All 0.05s ease;
