--- a/app/partials/target.html
+++ b/app/partials/target.html
@@ -8,7 +8,7 @@
 		<div class="btn">父 母</div>
 		<div class="btn">子 女</div>
 	</div>
-	<div class="target_btn">下一步</div>
+	<div class="target_btn" ng-click="goUserInfoNew()">下一步</div>
 </div>
 <script>
 	$("#relation .btn").click(function() {
