--- a/app/css/solution.css
+++ b/app/css/solution.css
@@ -3,6 +3,37 @@
   background-color: #f5f5f5; }
 body {
   background: #fff; }
+.key_head {
+  padding: 15px 10px;
+  color: #555;
+  font-size: 13px;
+  background: #fff;
+  line-height: normal;
+  text-align: top; }
+  .key_head .model {
+    font-size: 15px;
+    font-weight: bold; }
+    .key_head .model .anew {
+      display: inline-block;
+      float: right;
+      height: 30px;
+      box-sizing: border-box;
+      width: 70px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 13px;
+      line-height: 30px;
+      text-align: center;
+      color: #006ee9;
+      font-weight: normal; }
+  .key_head .wz {
+    padding: 10px 0;
+    line-height: 20px; }
+  .key_head .fa {
+    color: #999; }
+  .key_head img {
+    width: 15px;
+    vertical-align: -3px; }
 .header {
   background-color: #006ee9;
   color: #fff;
