--- a/app/sass/preference.scss
+++ b/app/sass/preference.scss
@@ -11,7 +11,7 @@ body {background: #f5f5f5;line-height: normal;}
 	.select {color: #999;font-size: 13px;margin-bottom: 15px;}
 	.relation {
 		.btn_ctrl {
-			img {width: 15px;display: none;}
+			img {width: 15px;display: none;vertical-align: 20px;position: absolute; left: -30px;top: 25%;}
 		}
 		.hobby_btn {
 			position:relative;
