simple auto commit

--- a/app/partials/userinfo.html
+++ b/app/partials/userinfo.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/userinfo.css?rev=a8b04a01984a8a734a177f1d6e77f748">
+<link rel="stylesheet" type="text/css" href="css/userinfo.css?rev=312c6c47473972c7c82b6818c99b8cc3">
 
 <div class="user-container">
 	<p class="title">资料设定</p>
@@ -20,7 +20,7 @@
 	</div>
 </div>
 -->
-<div id="ageMainContainer">
+<div id="ageContainer">
 	
 </div>
 <div class="cell cell-fix-bottom" >
@@ -28,5 +28,5 @@
 </div>
 <!-- <script type="text/javascript" src="js/age.js?rev=asafafaasdfaswafafaafaasdfasfb"></script>
 -->
-<script type="text/javascript" src="js/ageComponent.js?rev=asafafaasdfaswafaf"></script>
-<script type="text/javascript">var ageComponent = new AgeComponent();</script>
+<script type="text/javascript" src="js/ageComponent.js?rev=asafafaasdfasafafa"></script>
+<script type="text/javascript">var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:15});</script>
