--- a/app/css/userinfo.css
+++ b/app/css/userinfo.css
@@ -163,8 +163,8 @@ box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);
 	border-left: 1px solid #346290;
 	display: inline-block;
 	margin-left: -1px;
-	padding: 0px 0px 0px 3px;
-	width: 15px;
+	/*padding: 0px 0px 0px 3px;*/
+	width: 18px;
 	height: 10px;
 	vertical-align: top;
 	color: #20456c;
