--- a/app/partials/userinfo.html
+++ b/app/partials/userinfo.html
@@ -28,11 +28,11 @@
 </div>
 <!-- <script type="text/javascript" src="js/age.js?rev=asafafaasdfaswafafaafaasdfasfb"></script>
 -->
-<script type="text/javascript" src="js/ageComponent.js?rev=asafafaasdfasafafa"></script>
+<script type="text/javascript" src="js/ageComponent.js?rev=asafafaasdfafasfwsdasafafa"></script>
 <script type="text/javascript">
 
-//var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18,minAge:25,maxAge:50,startAge:30});
-var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18});
+var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18,minAge:25,maxAge:50,startAge:30});
+// var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18});
 
 
 </script>
