--- a/app/partials/userinfo.html
+++ b/app/partials/userinfo.html
@@ -31,8 +31,8 @@
 <script type="text/javascript" src="js/ageComponent.js?rev=asafafaasdfafasfwsdasafafa"></script>
 <script type="text/javascript">
 
-var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18,minAge:25,maxAge:50,startAge:30});
-// var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18});
+//var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18,minAge:25,maxAge:50,startAge:30});
+ var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18});
 
 
 </script>
