--- a/app/sass/bz_ts.scss
+++ b/app/sass/bz_ts.scss
@@ -12,127 +12,98 @@
 .promote_ctrl {
 	.head_ctrl {
 		background: #006ee9;
-	    padding: 25px 10px;
+	    padding: 30px 15px 30px 20px;
 	    overflow: auto;
 	    .head_left {
-		float: left;
-		.head_word {
-			font-size: .19rem;
-			color: #fff;
-		}
-		span {
-			display: inline-block;
-			width: .15rem;
-			height: .15rem;
-			background: #fff;
-		    border-radius: 50%;
-		    margin-right: 5px;
-		}
-		.head_state {
-			font-size: .15rem;
-            color: #97c8ff;
+		   float: left;
+		   padding-top: 8px;
+			.head_word {
+				font-size: 18px;
+				color: #fff;
+				line-height: 18px;
 			}
-		}
-		.head_center {
-			float: left;
-			font-size: .15rem;
-			color: #fff;
-			padding: .35rem 0 0 .3rem;
-            img {
-            	margin-left: .05rem;
-            	width: .45rem;
-            	display: block;
-            }
+			span:nth-child(1) {
+				display: inline-block;
+				width: 12px;
+				height: 12px;
+				background: #fff;
+			    border-radius: 50%;
+			    margin-right: 5px;
+			}
+			span:nth-child(2) {
+				font-weight: bold;
+				font-size: 21px;
+			}
+			.head_state {
+				font-size: 12px;
+	            color: #97c8ff;
+	            margin-top: 20px;
+			}
 		}
 		.head_right {
 			float: right;
+			height: 108px;
+			width: 108px;
+			background: url("../img/promote/tisheng_back.png") no-repeat;
+			background-size: 108px 108px;
+			color: #006ee9;
+			font-size: 13px;
+			position: relative;
 			text-align: center;
-			.score {
-				font-size: .51rem;
-				color: #fff;
-				text-align: center;
-				line-height: normal;
-				padding-top: 22px;
-			}
-			div:nth-child(2) {
-				width: 1.16rem;
-				height: .38rem;
-				box-sizing: border-box;
-				// @include border(1px,solid #97c8ff);
-				border: 1px solid #97c8ff;
-				border-radius: 2px;
-				line-height: .38rem;
-				text-align: center;
-				color: #fff;
-			} 
+			box-sizing: border-box;
+			padding-top: 70px;
+			font-weight: 500;
+			// line-height: 95px;
+			// .word-circle {
+			// 	position: absolute;
+			// 	left: 0;
+			// 	bottom: 0;
+			// }
+		}
+		.head_right:active {
+			background: #f5f5f5;
 		}
 	}
 	.promote_main {
-	@include flexbox;
-	padding: 0 10px;
-		.main_left {
-			width: 55px;
-			.shuxian {
-				width: 27px;
-				height: 44px;
-				// background: #ccc;
-				border-right: 1px solid #ccc;
-			}
-			.quan_img {
+	padding-left: 10px;
+		.main_word {
+			@include flexbox;
+			overflow: auto;
+			padding: 18px 10px 18px 0;
+			border-bottom: 1px solid #e2e2e2;
+			.logo_ctrl {
 				width: 30px;
-				height: 30px;
-				background: #ff6652;
-				border-radius: 50%;
-				margin-left: 12px; 
-				text-align: center;
-				// line-height: 30px;
-				img {
-					margin-top: 7px;
-					width: 15px;
-				}
+				box-sizing: border-box;
+				padding-top: 3px;
 			}
-		}
-		.pro_main_ctrl {
-		    @include flex(1);
-	        padding-top: 35px;
-			.main_word {
-				@include flexbox;
-				overflow: auto;
-				height: 76px;
-				padding: 0 10px 0 0;
-				.main_head {
-					font-size: 16px;
-					color: #555;
-				}
-				.change_word {
-					font-size: 12px;
-					color: #999;
-				}
-				.ts_btn {
-				background: #5aa8ff;
-				width: 70px;
-				height: 30px;
-				border-radius: 3px;
-				line-height: 30px;
-				text-align: center;
+			.main_head {
+				font-size: 16px;
+				color: #555;
+				line-height: 16px;
+				margin-bottom: 7px;
+			}
+			.change_word {
 				font-size: 12px;
-				color: #fff;
-				margin-top: 8px;
+				color: #999;
+				line-height: 12px;
 			}
 			.main_l {
+				// padding-right: 10px;
+				line-height: normal;
+				margin-left: 15px;
 				@include flex(1);
-				padding-right: 10px;
+				background: url(../img/jiantou.png) no-repeat right center;
+				background-size: 7.5px;
 			}
-			}
-			.main2 {
-				height: 73px;
-			}
-			.main3 {
-				height: 74px;
-			}
-			.main4 {
-				height: 50px;
-			}
+		}
+		.main2 {
+			height: 73px;
+		}
+		.main3 {
+			height: 74px;
+		}
+		.main4 {
+			height: 50px;
 		}
 	}
 }
