--- a/app/partials/bz_ts.html
+++ b/app/partials/bz_ts.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/bz_ts.css?rev=fghhggfhgfhgf">
+<link rel="stylesheet" href="css/bz_ts.css?rev=fhdgkjhj">
 <div class="promote_ctrl">
 	<div class="head_ctrl">
 		<div class="head_left">
