--- a/app/css/ring.css
+++ b/app/css/ring.css
@@ -228,23 +228,25 @@
   font-weight: bold;
   font-size: 18px; }
 .accident_mask {
-  height: 3.55rem; }
-.income_ctrl {
-  font-size: .19rem;
-  color: #555;
-  text-align: center;
-  padding-bottom: .1rem;
+  height: 3.55rem;
   position: relative; }
-  .income_ctrl .off {
+  .accident_mask .toast-off {
     position: absolute;
-    right: -0.3rem;
-    top: -0.3rem;
-    padding: 20px; }
-    .income_ctrl .off img {
+    right: 0;
+    top: 0;
+    overflow: auto;
+    padding: 14px 15px 15px; }
+    .accident_mask .toast-off img {
       width: .16rem;
       height: .16rem; }
+  .accident_mask .income_ctrl {
+    font-size: 15px;
+    color: #555;
+    text-align: center;
+    padding-bottom: .1rem;
+    position: relative; }
 .calculate {
-  font-size: .15rem;
+  font-size: 12px;
   color: #999;
   text-align: center;
   padding-bottom: .32rem; }
@@ -268,7 +270,7 @@
     line-height: .52rem;
     border-radius: 3px;
     margin-bottom: .25rem;
-    font-size: .19rem; }
+    font-size: 15px; }
 .toast_cs {
   height: 3.0rem;
   background: #f5f5f5;
