--- a/app/partials/userinfo_new.html
+++ b/app/partials/userinfo_new.html
@@ -24,8 +24,9 @@
 	</div> -->
 </div>
 <div class="target_btn" ng-click="goHobby()">下一步</div>
+
 <script type="text/javascript" src="js/ageComponent.js?rev=sdfsdsdfsd"></script>
 <script type="text/javascript">
-	var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis: 7});
+	var ageComponent = new AgeComponent({containerId:"yearIncome",minAge: 25,maxAge: 50,startAge: 25,yearDis: 7.5});
 	// var yearIncome = new AgeComponent({containerId:"yearIncome",minAge: 25,maxAge: 50,startAge: 25,yearDis: 7.5});
 </script>
