--- a/app/sass/ring.scss
+++ b/app/sass/ring.scss
@@ -289,26 +289,29 @@
 	height: 3.55rem;
 	// box-sizing: border-box;
 	// padding: 25px 20px;
-}
-.income_ctrl {
-	font-size: .19rem;
-	color: #555;
-	text-align: center;
-	padding-bottom: .1rem;
 	position: relative;
-	.off {
-    	position: absolute;
-    	right: -0.3rem;
-    	top:-0.3rem;
-    	padding: 20px;
-    	img {
+	.toast-off{
+		position: absolute;
+		right: 0;
+		top: 0;
+		overflow: auto;
+		padding: 14px 15px 15px;
+		img {
 	    	width: .16rem;
 	    	height: .16rem;
-    	}
-    }
+		}
+	}
+	.income_ctrl {
+		font-size: 15px;
+		color: #555;
+		text-align: center;
+		padding-bottom: .1rem;
+		position: relative;
+		
+	}
 }
 .calculate {
-	font-size: .15rem;
+	font-size: 12px;
 	color: #999;
 	text-align: center;
 	padding-bottom: .32rem;
@@ -325,7 +328,7 @@
 		line-height: .52rem;
 		border-radius: 3px;
 		margin-bottom: .25rem;
-		font-size: .19rem;
+		font-size: 15px;
 	}
 }
 .toast_cs {
