simple auto commit

--- a/app/partials/userinfo.html
+++ b/app/partials/userinfo.html
@@ -20,9 +20,9 @@
 	</div>
 </div>
 -->
-<div id="ageContainer">
-	
-</div>
+<div id="ageContainer"> </div>
+
+<div id="testContainer"> </div>
 <div class="cell cell-fix-bottom" >
 <a href="javascript:void(0)" class="btn btn_n_primary btn_dark_primary btn_no_radius" ng-click="submit()"   id="submitButton">开始</a>
 </div>
@@ -34,5 +34,5 @@
 //var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18,minAge:25,maxAge:50,startAge:30});
  var ageComponent = new AgeComponent({containerId:"ageContainer",yearDis:18});
 
-
+ // var testComponent = new AgeComponent({containerId:"testContainer",yearDis:18});
 </script>
