simple auto commit

--- a/app/partials/userinfo.html
+++ b/app/partials/userinfo.html
@@ -22,7 +22,7 @@
 -->
 <div id="ageContainer"> </div>
 
-<div id="testContainer"> </div>
+<!-- <div id="testContainer"> </div> -->
 <div class="cell cell-fix-bottom" >
 <a href="javascript:void(0)" class="btn btn_n_primary btn_dark_primary btn_no_radius" ng-click="submit()"   id="submitButton">开始</a>
 </div>
